# gacode

./: .VERSION  .gitignore  .gitmodules  CNAME  LICENSE  LICENSE.txt  Makefile  Makefile.am  NOTICE  NOTICE.md  README  README.autotool  README.creole  README.new_machine_config  README.rst  USER_AGREEMENT  USER_AGREEMENT.txt  configure.ac  gitlogCool.sh  gks_driver.f  python
config/: Makefile.am  bindist.am  boost.m4  ccfits.m4  clean-cxx.am  cleanconf.sh  corba.m4  depend.am  docs.am  fcflags.m4  fftwps.m4  globus.m4  gsoap.m4  hl5.m4  ittidl.m4  java2.m4  lapack.m4  libs.m4  linlibs.m4  macros.m4  mdsplus.m4  mpicomp_pp.m4  mpilauncher.m4  nim_hdf5.m4  nim_superlu.m4  ntcbase.m4  numpy.m4  parcompslibs.m4  regenconf.sh  rsiidl.m4  serialcomps.m4  tx_doxygen.m4  tx_fc_aux.m4  tx_fc_netcdf.m4  tx_gatransport.m4  tx_hdf5.m4  tx_init.m4  tx_latex.m4  tx_licmgr.m4  tx_mysql.m4  (+13 more)
config/.svn/: all-wcprops  dir-prop-base  entries
config/contrib/: Makefile.am  acx_f77_cmain_fflags.m4
f2py/: MANIFEST.in  Makefile  README.txt  pyproject.toml  requirements.txt  requirements_vis.txt  setup.py
f2py/expro/: Makefile  README.expro  __init__.py  expro.f90  expro_comm.f90  expro_locsim.f90  expro_pycomm.f90  expro_util.f90
f2py/gacode/: __init__.py  gapy.py  omfit.py
f2py/geo/: __init__.py  geo.f90
f2py/module/: Makefile
f2py/pygacode/: __init__.py  gacodefuncs.py  gacodeinput.py
f2py/test/: Makefile
f2py/vis/: Makefile  gapy_surfpar.f90  gapy_torcut.f90  gapy_wheel1.f90  gapy_wheel2.f90  vis.f90
gato/: Makefile  Makefile.am  gato.f  gato_plotg_library.f  gato_plotg_library.stub.f
gato/data/: Makefile.am  ingta
gato/install/: Makefile.am  make.ext.ALCF_BGP  make.ext.BANACH  make.ext.CAOS  make.ext.CMODWS  make.ext.CORI  make.ext.EDISON_CRAY  make.ext.GFORTRAN_PENRYN  make.ext.HELIOS  make.ext.HOPPER2  make.ext.HOPPER2_MT  make.ext.HOPPER_CRAY  make.ext.HPC_ITER  make.ext.JAGUAR  make.ext.JAGUAR_CRAY  make.ext.PGFORTRAN_OSX  make.ext.PG_OPT64_MUMPS  make.ext.REGATTA  make.ext.XK6
gyro/: CHANGES  CHANGES~  COPYRIGHT  Makefile  Makefile.am  README.creole
gyro/BLEND/: BLEND_F.f90  BLEND_Fp.f90  BLEND_cleanup.f90  BLEND_do.f90  BLEND_f2.f90  BLEND_f2p.f90  BLEND_f3.f90  BLEND_f3p.f90  BLEND_f4.f90  BLEND_f4p.f90  BLEND_init.f90  BLEND_private.f90  Makefile  Makefile.am
gyro/EIGEN/: EIGEN_do.F  EIGEN_do.f90  EIGEN_do.stub.f90  EIGEN_globals.f90  EIGEN_matrix_read.f90  EIGEN_matrix_write.f90  Makefile
gyro/GKEIGEN/: GKEIGEN_catch_error.f90  GKEIGEN_do.F  GKEIGEN_do.petsc31.F  GKEIGEN_globals.f90  GKEIGEN_matrix_read.f90  GKEIGEN_matrix_write.f90  GKEIGEN_split_comm.f90  Makefile  Makefile.am
gyro/SSUB/: Makefile  Makefile.am  SSUB_cleanup.f90  SSUB_init.f90  SSUB_private.f90  fSSUB.f90  rSSUB.f90
gyro/TRANSPOSE/: Makefile  Makefile.am  fTRANSP_CLEANUP.f90  fTRANSP_DO.f90  fTRANSP_GLOBALS.f90  fTRANSP_INIT.f90  rTRANSP_CLEANUP.f90  rTRANSP_DO.f90  rTRANSP_GLOBALS.f90  rTRANSP_INIT.f90
gyro/install/: Makefile.am  make.ext.ALCF_BGP  make.ext.BABBAGE  make.ext.BANACH_PETSC  make.ext.BASSI  make.ext.CAESAR  make.ext.CARVER  make.ext.DAWSON  make.ext.DROP  make.ext.EDISON_CRAY_MUMPS  make.ext.FRANKLIN  make.ext.GFORTRAN_CORE2  make.ext.GFORTRAN_TECHX  make.ext.HOPPER  make.ext.HOPPER2  make.ext.HOPPER2_MT  make.ext.HOPPER_CRAY  make.ext.IFORT_P3  make.ext.JACQUARD  make.ext.JAGUAR_CRAY  make.ext.LINDGREN  make.ext.LOKI  make.ext.LOKI_SCRATCH  make.ext.OSX_CATALINA  make.ext.OSX_YOSEMITE  make.ext.PG_FFTW  make.ext.PG_OPT64_MUMPS  make.ext.PHOENIX  make.ext.PPPL  make.ext.PSFCLUSTER  make.ext.REGATTA  make.ext.TITAN_CRAY_OMP  make.ext.TITAN_PGI  make.ext.TUMBLEWEED  make.ext.UBGL  make.ext.XE6  make.ext.XK6  make.ext.XT3  make.ext.XT5  make.ext.XT5_SLEPC  (+2 more)
gyro/peek/: Makefile  Makefile.am  peek.f90  peek_globals.f90  read_input.f90  read_profile_vugyro.f90  read_time.f90
gyro/postgyro/: analyze_synbes.pro  analyze_syncece.pro  analyze_synrefl.pro  analyze_synxphase.pro  calc_rfspect1d.pro  calc_rfspect1d_phase_one.pro  colorbar.pro  default.pro  envelope.pro  exp_fit.pro  get_gyro_data.pro  get_gyro_hdf5_wedge.pro  get_input_profiles.pro  gyro_generate_rzcoords.pro  gyro_ralpha_midplane_transform.pro  gyro_rtheta_transform.pro  gyro_rz_color_contour.pro  make_bigfields.pro  make_synbes_array.pro  make_synbes_array_with_wedge.pro  make_syncece_array.pro  make_synrefl_array.pro  numtostring.pro  plot_gyro_fluxsurfaces.pro  plot_gyro_linfreq.pro  plot_gyro_midplane_ralpha.pro  plot_gyro_midplane_rmsflucamps.pro  plot_gyro_rz.pro  plot_gyro_summary.pro  plotlabel.pro  read_gyro_array.pro  read_gyro_profile_data.pro  read_gyro_profile_data_hdf5.pro  read_gyro_timevector.pro
gyro/src/: GKEIGEN_split_comm.f90  Makefile  Makefile.am  ORB_do.f90  ORB_init.f90  ORB_lambda.f90  ORB_private.f90  ORB_s.f90  ORB_s2lambda.f90  alloc_add.f90  allocate_profile_exp.f90  catch_blowup.f90  catch_error.f90  catch_halt_signal.f90  cleanup_mumps.f90  cleanup_mumps.mumps.f90  collect_complex.f90  collect_integer.f90  collect_real.f90  do_dtau.f90  do_nlfast_match.X1E.f90  do_nlfast_match.f90  do_nlfast_p.X1E.f90  do_nlfast_p.f90  do_nlfft_match.essl.f90  do_nlfft_match.fftw.f90  do_nlfft_match.libsci.f90  do_nlfft_match.stub.f90  do_nlfft_p.essl.f90  do_nlfft_p.fftw.f90  do_nlfft_p.libsci.f90  do_nlfft_p.stub.f90  du.c  get_ampere_coll.f90  get_ampere_explicit.f90  get_delta_he.f90  get_error.f90  get_field_explicit.f90  get_field_fluxave.f90  get_field_plot.f90  (+263 more)
gyro/tools/: Makefile  Makefile.am  README.help
gyro/vshdf5/: Makefile  Makefile.am  README  gyro_dummy_master_hdf5.f90  gyro_hdf5_mod.f90  gyro_vshdf5_mod.f90  gyro_write_dummy_hdf5.f90  gyro_write_initdata_hdf5.f90  gyro_write_master_hdf5.f90  gyro_write_timedata_hdf5.f90  gyro_write_timedata_wedge_hdf5.f90
gyro/vugyro/: Makefile.am  README.vugyro  add_image.pro  all_profiles_event.pro  all_profiles_see.pro  (+221 more)
neo/: CHANGES  Makefile  Makefile.am
share/: Makefile.am
shared/: Makefile  Makefile.am
tglf/: Makefile  Makefile.am
tgyro/: CHANGES  Makefile  Makefile.am  Makefile.extra
xptor/: Makefile  Makefile.am  Makefile~
(+4647 files in other folders)
