## ############################################################
##
## File:  Makefile.am
##
## Purpose:  Run automake in top directory to make Makefile.in
##           in all subdirectories
##
## $Id: Makefile.am 81 2010-03-26 17:50:38Z kruger $

## ############################################################

SUBDIRS	= bin nclass src #sim src tools

datadir = $(prefix)/neo
dist_data_DATA = CHANGES


MAINTAINERCLEANFILES    = Makefile.in 

