## ############################################################
##
## File:  Makefile.am
##
## Purpose:  Run automake in top directory to make Makefile.in
##           in all subdirectories
##
## $Id: Makefile.am 45 2010-01-12 04:25:07Z srinath $

## ############################################################

SUBDIRS= bin python src #tools 

libdir = $(prefix)/lib

MAINTAINERCLEANFILES    = Makefile.in 

   
